[cleanup] Improved codestyle
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/core/trunk@34382 f329d543-caf0-0310-9063-dda96c69346f